--- a/index.htm
+++ b/index.htm
@@ -120,6 +120,7 @@ table  {
       <td>Personal:</td>
 	  <td>
 	  <br/>
+      <a href="https://duckduckgo.com/" target="_blank">Duck Duck Go<a href="" target="_blank"></a><br/>
       <a href="https://www.nytimes.com/" target="_blank">NY Times<a href="" target="_blank"></a><br/>
       <a href="https://www.pandora.com/" target="_blank">Pandora<a href="" target="_blank"></a><br/>
       <a href="https://providencejournal-ri.newsmemory.com/" target="_blank">Providence Journal</a><br/>
