--- a/index.htm
+++ b/index.htm
@@ -120,11 +120,13 @@ table  {
       <td>Personal:</td>
 	  <td>
 	  <br/>
-      <a href="https://duckduckgo.com/" target="_blank">Duck Duck Go<a href="" target="_blank"></a><br/>
-      <a href="https://www.nytimes.com/" target="_blank">NY Times<a href="" target="_blank"></a><br/>
-      <a href="https://www.pandora.com/" target="_blank">Pandora<a href="" target="_blank"></a><br/>
+      <a href="https://duckduckgo.com/" target="_blank">DuckDuckGo</a> / 
+      <a href="https://google.com/" target="_blank">Google</a> / 
+      <a href="https://google.com/maps" target="_blank">Google Maps</a><br/>
+      <a href="https://www.nytimes.com/" target="_blank">NY Times</a><br/>
+      <a href="https://www.pandora.com/" target="_blank">Pandora</a><br/>
       <a href="https://providencejournal-ri.newsmemory.com/" target="_blank">Providence Journal</a><br/>
-      <a href="https://weather.com/" target="_blank">Weather<a href="" target="_blank"></a>	/ 
+      <a href="https://weather.com/" target="_blank">Weather</a>	/ 
       <a href="https://www.wunderground.com/wundermap" target="_blank">Wundermap</a> / 
 	  <a href="https://forecast.weather.gov/shmrn.php?mz=anz236" target="_blank">Bay</a><br/>	
       <a href="https://tv.youtube.com/" target="_blank">Youtube TV</a><br/>	  
