--- a/index.htm
+++ b/index.htm
@@ -69,7 +69,7 @@ table  {
 	  <a href="https://keep.google.com/u/0/" target="_blank">Google Keep </a><br/>
 	  <a href="https://drive.google.com/drive/u/1/my-drive" target="_blank">Google Drive (URI) </a><br/>
 	  <a href="https://www.office.com/?auth=2" target="_blank">URI Office 365 Portal</a><br/>	
-      <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=jSptQs2cVUKJPQaGoywWjeAo9fbkR1NBs_QOPV0k7XBUNjgzM0kwUUlWQzFXMDRNWlA2T1A2NUdVWC4u" target="_blank">URI Daily Assessment</a><br/>	   	  
+      <!-- <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=jSptQs2cVUKJPQaGoywWjeAo9fbkR1NBs_QOPV0k7XBUNjgzM0kwUUlWQzFXMDRNWlA2T1A2NUdVWC4u" target="_blank">URI Daily Assessment</a><br/>	 -->  	  
       <a href="https://web.uri.edu/healthservices/covid-19/tracker/" target="_blank">URI COVID-19 Tracking</a><br/>	 
 	  <a href="https://personal.egr.uri.edu/taggart/gom/index.htm" target="_blank">Aramis training videos</a><br/>	 
 	  <br/>  
@@ -90,10 +90,10 @@ table  {
 	  <a href="https://uri-edu.zoom.us/j/7846696676" target="_blank">Personal Room</a><br/>  	  
 	  <a href="https://rhody.webex.com/webappng/sites/rhody/dashboard/home" target="_blank">URI Webex</a> / 
 	  <a href="https://rhody.webex.com/meet/taggarturi.edu" target="_blank">Personal Room</a><br/>  
-	  <a href="https://sakai.uri.edu/portal/site/!gateway/tool/!gateway-110" target="_blank">Sakai</a><br/>
+	  <!-- <a href="https://sakai.uri.edu/portal/site/!gateway/tool/!gateway-110" target="_blank">Sakai</a><br/> -->
 	  <a href="https://web.uri.edu/ecampus/faculty-staff-access/" target="_blank">e-Campus</a><br/>
-	  <a href="https://www.cengage.com/" target="_blank">Cengage MindTap</a><br/>
-	  <a href="https://uri.techsmithrelay.com/myprofile" target="_blank">Knowmia (TechSmith Relay)</a><br/> 
+	  <!-- <a href="https://www.cengage.com/" target="_blank">Cengage MindTap</a><br/> -->
+	  <!-- <a href="https://uri.techsmithrelay.com/myprofile" target="_blank">Knowmia (TechSmith Relay)</a><br/> -->
 	  <a href="https://uri.hosted.panopto.com/" target="_blank">Panopto</a><br/> 
 	  <a href=" https://github.com/" target="_blank">GitHub</a><br/>	 
 	  <!-- <a href="" target="_blank">Brightspace</a><br/> -->
