--- a/index.htm
+++ b/index.htm
@@ -84,6 +84,7 @@ table  {
 	  <a href="https://personal.egr.uri.edu/taggart/courses/mce466" target="_blank">MCE 466</a> / 
 	  <a href="https://personal.egr.uri.edu/taggart/courses/egr106" target="_blank">EGR 106</a><br/> -->
 	  <a href=" https://dgtaggart.github.io/mce466/" target="_blank">MCE 466</a> / 
+	  <a href=" https://dgtaggart.github.io/mce466_f21/" target="_blank">MCE 466 (F21)</a> /
 	  <a href="https://dgtaggart.github.io/mce571/" target="_blank">MCE 571</a><br/>
 	  <a href="https://brightspace.uri.edu/d2l/home" target="_blank">Brightspace</a><br/>  
 	  <a href="https://uri-edu.zoom.us/" target="_blank">URI Zoom</a> / 
