--- a/index.htm
+++ b/index.htm
@@ -87,7 +87,7 @@ table  {
 	  <a href="https://dgtaggart.github.io/mce571/" target="_blank">MCE 571</a><br/>
 	  <a href=" https://dgtaggart.github.io/mce466/" target="_blank">MCE 466 (W22)</a> / -->
 	  <a href=" https://dgtaggart.github.io/egr106_s22/" target="_blank">EGR 106</a> /
-	  <a href="https://dgtaggart.github.io/mce466_s22/" target="_blank">MCE 466</a><br/>
+	  <a href="https://dgtaggart.github.io/mce466/" target="_blank">MCE 466</a><br/>
 	  <a href="https://access.ecc.uri.edu/" target="_blank">ECC Remote Access</a><br/>
 	  <a href="https://brightspace.uri.edu/d2l/home" target="_blank">Brightspace</a><br/>  
 	  <a href="https://uri-edu.zoom.us/" target="_blank">URI Zoom</a> / 
