--- a/index.htm
+++ b/index.htm
@@ -95,11 +95,11 @@ table  {
 	  <a href="https://rhody.webex.com/webappng/sites/rhody/dashboard/home" target="_blank">URI Webex</a> / 
 	  <a href="https://rhody.webex.com/meet/taggarturi.edu" target="_blank">Personal Room</a><br/>  
 	  <!-- <a href="https://sakai.uri.edu/portal/site/!gateway/tool/!gateway-110" target="_blank">Sakai</a><br/> -->
-	  <a href="https://web.uri.edu/ecampus/faculty-staff-access/" target="_blank">e-Campus</a><br/>
+	  <a href="https://ecampus.uri.edu/faculty-staff" target="_blank">e-Campus</a><br/>
 	  <!-- <a href="https://www.cengage.com/" target="_blank">Cengage MindTap</a><br/> -->
 	  <!-- <a href="https://uri.techsmithrelay.com/myprofile" target="_blank">Knowmia (TechSmith Relay)</a><br/> -->
 	  <a href="https://uri.hosted.panopto.com/" target="_blank">Panopto</a><br/> 
-	  <a href=" https://github.com/" target="_blank">GitHub</a><br/>	 
+	  <a href="https://github.com/" target="_blank">GitHub</a><br/>	 
 	  <!-- <a href="" target="_blank">Brightspace</a><br/> -->
 	  <br/>
 	  </td>
