--- a/index.htm
+++ b/index.htm
@@ -70,8 +70,10 @@ table  {
 	  <a href="https://drive.google.com/drive/u/1/my-drive" target="_blank">Google Drive (URI) </a><br/>
 	  <a href="https://www.office.com/?auth=2" target="_blank">URI Office 365 Portal</a><br/>	
       <!-- <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=jSptQs2cVUKJPQaGoywWjeAo9fbkR1NBs_QOPV0k7XBUNjgzM0kwUUlWQzFXMDRNWlA2T1A2NUdVWC4u" target="_blank">URI Daily Assessment</a><br/>	 -->  	  
-      <a href="https://web.uri.edu/healthservices/covid-19/tracker/" target="_blank">URI COVID-19 Tracking</a><br/>	 
-	  <a href="https://personal.egr.uri.edu/taggart/gom/index.htm" target="_blank">Aramis training videos</a><br/>	 
+      <a href="https://web.uri.edu/healthservices/covid-19/tracker/" target="_blank">URI COVID-19 Tracking</a><br/>	
+	  <a href="https://drive.google.com/file/d/1zY0bGvDmTzqHAgSZLPRa_KaE4XBSzDW5/view" target="_blank">Aramis training videos</a><br/>
+	 <!--  <a href="https://personal.egr.uri.edu/taggart/gom/index.htm" target="_blank">Aramis training videos</a><br/>	 -->
+	  <a href="https://hci-vdi.sdsc.edu/" target="_blank">SDSC</a><br/>	 
 	  <br/>  
 	  </td>
     </tr>
