--- a/index.htm
+++ b/index.htm
@@ -97,7 +97,10 @@ table  {
 	  <a href="https://rhody.webex.com/webappng/sites/rhody/dashboard/home" target="_blank">URI Webex</a> / 
 	  <a href="https://rhody.webex.com/meet/taggarturi.edu" target="_blank">Personal Room</a><br/>  
 	  <!-- <a href="https://sakai.uri.edu/portal/site/!gateway/tool/!gateway-110" target="_blank">Sakai</a><br/> -->
-	  <a href="https://ecampus.uri.edu/faculty-staff" target="_blank">e-Campus</a><br/>
+	  <a href="https://ecampus.uri.edu/faculty-staff" target="_blank">e-Campus Academic</a><br/>
+	  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeakRz4NWFFDus-POLX180RMiPrS4g9tEKYs949LcqFb--ggA/viewform" target="_blank">Permission Number Form</a><br/>
+	  <a href="https://web.uri.edu/ecampus/financial-administration/" target="_blank">e-Campus Financials</a><br/>
+	 
 	  <!-- <a href="https://www.cengage.com/" target="_blank">Cengage MindTap</a><br/> -->
 	  <!-- <a href="https://uri.techsmithrelay.com/myprofile" target="_blank">Knowmia (TechSmith Relay)</a><br/> -->
 	  <a href="https://uri.hosted.panopto.com/" target="_blank">Panopto</a><br/> 
